# scssim

./: CMakeLists.txt  LICENSE  README.md
docs/: workflow.tif
lib/: CMakeLists.txt
lib/amplicon/: Amplicon.cpp  Amplicon.h
lib/config/: Config.cpp  Config.h
lib/fragment/: Fragment.cpp  Fragment.h
lib/genome/: Genome.cpp  Genome.h
lib/malbac/: Malbac.cpp  Malbac.h
lib/mydefine/: MyDefine.cpp  MyDefine.h
lib/profile/: Profile.cpp  Profile.h
lib/threadpool/: ThreadPool.cpp  ThreadPool.h
src/: genReads.cpp  learnProfile.cpp  preAmplify.cpp  scssim.cpp  simuVars.cpp
testData/: ref.fa  ref.fa.fai
testData/models/: Illumina_GenomeAnalyzerIIx.profile  Illumina_HiSeq2000.profile  Illumina_HiSeq2500.profile  Illumina_HiSeqXTen.profile
testData/snps/: downloaded_snp_example.txt
testData/vars/: vars.txt
util/: snpFilter.sh
